--- a/SSHy/src/app/sshy/sshy.component.html
+++ b/SSHy/src/app/sshy/sshy.component.html
@@ -13,8 +13,7 @@
         <span class="title large">Terminal Options</span>
         <hr>
         <span class="title" style="padding-top:20px">Font Size</span>
-        <a class="leftarrow" href="javascript:;" onclick="settings.modFontSize(-1)">
-        </a>
+        <a class="leftarrow" href="javascript:;" onclick="settings.modFontSize(-1)"></a>
         <span class="middle" id="currentFontSize">16px</span>
         <a class="rightarrow" href="javascript:;" onclick="settings.modFontSize(1)"></a>
         <span class="title" style="padding-top:40px">Terminal Size</span>
@@ -25,20 +24,15 @@
             <input type="number" id="termRows" oninput="settings.modTerm(1, this.value)">
         </span>
         <span class="title" style="padding-top:60px;">Local Echo</span>
-        <a class="leftarrow" href="javascript:;" onclick="settings.setLocalEcho(-1)">
-
-        </a>
-        <a class="rightarrow" href="javascript:;" onclick="settings.setLocalEcho(1)">>
-
-        </a>
+        <a class="leftarrow" href="javascript:;" onclick="settings.setLocalEcho(-1)"></a>
+        <a class="rightarrow" href="javascript:;" onclick="settings.setLocalEcho(1)">></a>
         <div class="fileUpload btn btn-primary nomargin">
             <span class="tooltiptext" style="visibility:hidden;" id="autoEchoState">State:
                 Disabled</span>
             <span class="middle" id="currentLEcho">Force Off</span>
         </div>
         <span class="title" style="padding-top:50px">Colours</span>
-        <a class="leftarrow" href="javascript:;" onclick="settings.cycleColorSchemes(0)">
-        </a>
+        <a class="leftarrow" href="javascript:;" onclick="settings.cycleColorSchemes(0)"></a>
         <span class="middle" id="currentColor">Monokai</span>
         <a class="rightarrow" href="javascript:;" onclick="settings.cycleColorSchemes(1)"></a>
         <div class="fileUpload btn btn-primary">
