--- a/SSHy/src/app/dialog-overview/dialog-overview.html
+++ b/SSHy/src/app/dialog-overview/dialog-overview.html
@@ -1,11 +1,22 @@
 <mat-list>
-  <mat-list-item> <button mat-button routerLink="sshy">Pick one</button> </mat-list-item>
-  <mat-divider></mat-divider>
-  <mat-list-item> <button mat-button routerLink="sshy">Pick one</button> </mat-list-item>
-  <mat-divider></mat-divider>
-
+  <mat-list-item *ngFor="let item of sshy_games">
+    <button mat-raised-button [routerLink]="['sshy']" [queryParams]="{game : item.path}">
+      {{item.name}}
+    </button>
+    <button mat-fab color="primary">
+      <mat-icon>{{item.icon}}</mat-icon>
+    </button>
+  </mat-list-item>
+</mat-list>
+<mat-divider></mat-divider>
+<mat-list>
   <mat-list-item *ngFor="let item of parchment_games">
-    <button mat-button [routerLink]="['parchment']" [queryParams]="{story : item.path}">{{item.name}}</button>
+    <button mat-raised-button [routerLink]="['parchment']" [queryParams]="{story : item.path}">
+      {{item.name}}
+    </button>
+    <button mat-fab color="primary">
+      <mat-icon>{{item.icon}}</mat-icon>
+    </button>
   </mat-list-item>
 </mat-list>
 
