--- a/SSHy/src/app/dialog-overview/dialog-overview-sshy.html
+++ b/SSHy/src/app/dialog-overview/dialog-overview-sshy.html
@@ -3,4 +3,4 @@
     <mat-icon>clear</mat-icon>
   </button>
 </div>
-<sshy></sshy>
+<sshy-silent [url]="url" [login]="login" [pass]="pass"></sshy-silent>
