--- a/SSHy/src/app/sshy/wrapper.html
+++ b/SSHy/src/app/sshy/wrapper.html
@@ -1,12 +1,19 @@
 <html>
+
 <head>
 	<script type="text/javascript">
-		var wsproxyURL = "ws://localhost:5999/ts.stuicey.info:22"
+		//var wsproxyURL = "ws://localhost:5999/18.218.9.36:22"
+		//var login = "ubuntu"
+		//var pass = 123
+
+		//window_onload("ws://localhost:5999/18.218.9.36:22", "ubuntu", "123")
 	</script>
-	<link rel="stylesheet" href="css/xterm.css" async/>
+	<link rel="stylesheet" href="css/xterm.css" async />
 	<script type="text/javascript" src="js/combinedJS.comb.js" async></script>
 </head>
+
 <body>
 	<div id="terminal"></div>
 </body>
+
 </html>
